Fixed css errors which meant all pages were out of place

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -6,7 +6,6 @@
 @import "environment_notice.sass"
 @import "custom_flash.sass"
 
-
 body
   background-image: url("background.png")
 
@@ -66,6 +65,8 @@ a
     color: $colDefault
     &:hover
       color: $colHighlight
+
+
 @media (max-width: 767px)
   .navbar-default .navbar-nav .open .dropdown-menu
     > li > a
@@ -81,11 +82,10 @@ a
   .navbar, .navbar-header, .navbar-collapse
     min-height: 30px !important
     height: 52px
-    margin-bottom: 0px
-
+    margin-bottom: 0
 
 #main-container
-  padding: 0px
+  padding: 0
   width: 55%
 
 .carousel, .carousel-inner, .item
@@ -129,11 +129,9 @@ a
   //border-left: 1px solid #b3b3b3
   //border-right: 1px solid #b3b3b3
   //border-top: 1px solid #b3b3b3
-  margin: 0px
-  padding-bottom: 30px
+  //margin: 0
+  padding: 10px 10px
   background-color: white
-
-.page-header
 
 .input-group
   width: 100%
@@ -259,3 +257,10 @@ hr
 footer
   img
     height: 60px
+
+.row
+  margin-left: 0
+  margin-right: 0
+
+.page-header
+  margin-top: 20px
